1) Position auto complete drop down to absolute so it wont push down the content. 2) Limited the size of images to 80vh 80vw in display mode, to prevent images overflowing the viewport.

--- a/src/App.css
+++ b/src/App.css
@@ -19,5 +19,5 @@ h1{
 
 .option:hover{
     background-color: blueviolet;
-    
+    color: white;
 }
